--- a/docs/latex/refman.tex
+++ b/docs/latex/refman.tex
@@ -171,10 +171,19 @@
 \hypersetup{pageanchor=true}
 
 %--- Begin generated contents ---
-\chapter{Casual\+Library}
-\label{md__r_e_a_d_m_e}
-\Hypertarget{md__r_e_a_d_m_e}
-\input{md__r_e_a_d_m_e}
+\chapter{Todo List}
+\label{todo}
+\Hypertarget{todo}
+\input{todo}
+\chapter{Namespace Index}
+\input{namespaces}
+\chapter{Class Index}
+\input{annotated}
+\chapter{Namespace Documentation}
+\input{namespace_external}
+\chapter{Class Documentation}
+\input{class_helper}
+\input{class_external_1_1_memory}
 %--- End generated contents ---
 
 % Index
