--- a/docs/latex/refman.tex
+++ b/docs/latex/refman.tex
@@ -171,6 +171,8 @@
 \hypersetup{pageanchor=true}
 
 %--- Begin generated contents ---
+\chapter{Casual\+Library}
+\label{index}\hypertarget{index}{}\input{index}
 \chapter{Todo List}
 \label{todo}
 \Hypertarget{todo}
