--- a/docs/latex/refman.tex
+++ b/docs/latex/refman.tex
@@ -171,7 +171,7 @@
 \hypersetup{pageanchor=true}
 
 %--- Begin generated contents ---
-\chapter{Casual\+Library}
+\chapter{Overview}
 \label{index}\hypertarget{index}{}\input{index}
 \chapter{Todo List}
 \label{todo}
