--- a/docs/latex/namespace_external.tex
+++ b/docs/latex/namespace_external.tex
@@ -11,7 +11,7 @@ class \mbox{\hyperlink{class_external_1_1_memory}{Memory}}
 The \mbox{\hyperlink{class_external_1_1_memory}{Memory}} class is a collection functions used for external memory hacking.
 
 \begin{DoxyAuthor}{Author}
-Casual\+Comunity\+: Alien, C3x0r, Casual\+Gamer 
+Casual\+Community\+: Alien, C3x0r, Casual\+Gamer 
 \end{DoxyAuthor}
 \begin{DoxyVersion}{Version}
 0.\+1 23.\+10.\+2020 
