--- a/docs/latex/index.tex
+++ b/docs/latex/index.tex
@@ -1,7 +1,8 @@
 \hypertarget{index_autotoc_md1}{}\doxysection{About The Project}\label{index_autotoc_md1}
 \mbox{\hyperlink{class_helper}{Helper}} library for external windows game hacking.
 
-Collaborative work provided by the \href{https://discord.gg/CRMQq4F}{\texttt{ Casual\+Community}}\hypertarget{index_autotoc_md2}{}\doxysection{Usage}\label{index_autotoc_md2}
+Collaborative work provided by the \href{https://discord.gg/CRMQq4F}{\texttt{ Casual\+Community}}\hypertarget{index_autotoc_md2}{}\doxysection{Documentation}\label{index_autotoc_md2}
+The main set of documentation can be found \href{https://casualcoder91.github.io/CasualLibrary/html/index.html}{\texttt{ here}}\hypertarget{index_autotoc_md3}{}\doxysection{Usage}\label{index_autotoc_md3}
 bare-\/bones setup
 
 
@@ -30,5 +31,21 @@ read/write memory
 \DoxyCodeLine{std::string text = memory.readString(address, 200);}
 \DoxyCodeLine{\textcolor{comment}{//write value 5 starting at given address}}
 \DoxyCodeLine{memory.write<\textcolor{keywordtype}{int}>(address, 5);}
+\end{DoxyCode}
+
+
+get address from static pointer + offsets
+
+
+\begin{DoxyCode}{0}
+\DoxyCodeLine{uintptr\_t healthAddr = memory.getAddress(0x2240001C, \{ 0x01,0x4E \});}
+\end{DoxyCode}
+
+
+get module base address
+
+
+\begin{DoxyCode}{0}
+\DoxyCodeLine{uintptr\_t clientAddr = memory.getModule(L\textcolor{stringliteral}{"client.dll"});}
 \end{DoxyCode}
  
