bugfixing. error handling. documentation. rework of signature scanner

--- a/docs/latex/class_helper.tex
+++ b/docs/latex/class_helper.tex
@@ -3,8 +3,8 @@
 \doxysubsection*{Static Public Member Functions}
 \begin{DoxyCompactItemize}
 \item 
-\mbox{\Hypertarget{class_helper_a6895226b333f31f6f99464402c7f2ba7}\label{class_helper_a6895226b333f31f6f99464402c7f2ba7}} 
-static bool {\bfseries is64} (H\+A\+N\+D\+LE process)
+\mbox{\Hypertarget{class_helper_a017cbd1b38e3e7804011fa226ca8d319}\label{class_helper_a017cbd1b38e3e7804011fa226ca8d319}} 
+static bool {\bfseries is64} (const H\+A\+N\+D\+LE process)
 \end{DoxyCompactItemize}
 
 
