--- a/docs/latex/class_external_1_1_memory.tex
+++ b/docs/latex/class_external_1_1_memory.tex
@@ -7,33 +7,32 @@
 \doxysubsection*{Public Member Functions}
 \begin{DoxyCompactItemize}
 \item 
-\mbox{\Hypertarget{class_external_1_1_memory_aa1dc947d04cf99aa74763366b6514b2c}\label{class_external_1_1_memory_aa1dc947d04cf99aa74763366b6514b2c}} 
-{\bfseries Memory} (std\+::string proc)
+\mbox{\Hypertarget{class_external_1_1_memory_a8545b1edd0944dfc67aa806edcea3345}\label{class_external_1_1_memory_a8545b1edd0944dfc67aa806edcea3345}} 
+{\bfseries Memory} (const std\+::string \&proc)
 \item 
-\mbox{\Hypertarget{class_external_1_1_memory_ad9565e49277b117a34e02bb946cdef4d}\label{class_external_1_1_memory_ad9565e49277b117a34e02bb946cdef4d}} 
-{\footnotesize template$<$typename T $>$ }\\T {\bfseries read} (uintptr\+\_\+t add\+To\+Be\+Read)
+\mbox{\Hypertarget{class_external_1_1_memory_a0f703faf01135065b2c59ad9dcd54f5e}\label{class_external_1_1_memory_a0f703faf01135065b2c59ad9dcd54f5e}} 
+{\footnotesize template$<$typename T $>$ }\\\+\_\+\+\_\+forceinline T {\bfseries read} (const uintptr\+\_\+t add\+To\+Be\+Read) noexcept
 \item 
-\mbox{\Hypertarget{class_external_1_1_memory_a068f99b98f17f8be80a0cf2c0af8ca9a}\label{class_external_1_1_memory_a068f99b98f17f8be80a0cf2c0af8ca9a}} 
-std\+::string {\bfseries read\+String} (uintptr\+\_\+t add\+To\+Be\+Read, size\+\_\+t size=0)
+\mbox{\Hypertarget{class_external_1_1_memory_ac638b42b0ccd5b73e2b753c8df1919eb}\label{class_external_1_1_memory_ac638b42b0ccd5b73e2b753c8df1919eb}} 
+std\+::string {\bfseries read\+String} (const uintptr\+\_\+t add\+To\+Be\+Read, std\+::size\+\_\+t size=0) noexcept
 \item 
-\mbox{\Hypertarget{class_external_1_1_memory_a4843510cd335eb8a8c880bc90c4dc8c1}\label{class_external_1_1_memory_a4843510cd335eb8a8c880bc90c4dc8c1}} 
-{\footnotesize template$<$typename Z $>$ }\\Z {\bfseries write} (uintptr\+\_\+t add\+To\+Write, Z val\+To\+Write)
+\mbox{\Hypertarget{class_external_1_1_memory_a77baccd12f02e4c2671651678ec3ac2b}\label{class_external_1_1_memory_a77baccd12f02e4c2671651678ec3ac2b}} 
+{\footnotesize template$<$typename T $>$ }\\\+\_\+\+\_\+forceinline T {\bfseries write} (const uintptr\+\_\+t add\+To\+Write, const T val\+To\+Write) noexcept
 \item 
-\mbox{\Hypertarget{class_external_1_1_memory_a9310f0bf625e80be8b076128e885b3e9}\label{class_external_1_1_memory_a9310f0bf625e80be8b076128e885b3e9}} 
-D\+W\+O\+RD \mbox{\hyperlink{class_external_1_1_memory_a9310f0bf625e80be8b076128e885b3e9}{get\+Process\+ID}} ()
+\mbox{\Hypertarget{class_external_1_1_memory_a064407e96945419f18b6de5445f0c938}\label{class_external_1_1_memory_a064407e96945419f18b6de5445f0c938}} 
+D\+W\+O\+RD \mbox{\hyperlink{class_external_1_1_memory_a064407e96945419f18b6de5445f0c938}{get\+Process\+ID}} (void) noexcept
 \begin{DoxyCompactList}\small\item\em returns process id of the target process \end{DoxyCompactList}\item 
-\mbox{\Hypertarget{class_external_1_1_memory_a5243e3825c3ec9da97f6d0c4c1d579f9}\label{class_external_1_1_memory_a5243e3825c3ec9da97f6d0c4c1d579f9}} 
-uintptr\+\_\+t \mbox{\hyperlink{class_external_1_1_memory_a5243e3825c3ec9da97f6d0c4c1d579f9}{get\+Module}} (const wchar\+\_\+t $\ast$mod\+Name)
+\mbox{\Hypertarget{class_external_1_1_memory_aa06a8b3085b510bf9e420691b4627b44}\label{class_external_1_1_memory_aa06a8b3085b510bf9e420691b4627b44}} 
+uintptr\+\_\+t \mbox{\hyperlink{class_external_1_1_memory_aa06a8b3085b510bf9e420691b4627b44}{get\+Module}} (const std\+::string \&mod\+Name) noexcept
 \begin{DoxyCompactList}\small\item\em returns the module base address of {\ttfamily mod\+Name} (example\+: \char`\"{}client.\+dll\char`\"{}) \end{DoxyCompactList}\item 
-\mbox{\Hypertarget{class_external_1_1_memory_a79d67848c0f68352a146fd9db3cc04e0}\label{class_external_1_1_memory_a79d67848c0f68352a146fd9db3cc04e0}} 
-uintptr\+\_\+t {\bfseries get\+Address} (uintptr\+\_\+t addr, std\+::vector$<$ uintptr\+\_\+t $>$ vect)
+\mbox{\Hypertarget{class_external_1_1_memory_a275a26881b14c7d280780b373f811230}\label{class_external_1_1_memory_a275a26881b14c7d280780b373f811230}} 
+uintptr\+\_\+t \mbox{\hyperlink{class_external_1_1_memory_a275a26881b14c7d280780b373f811230}{get\+Address}} (const uintptr\+\_\+t base\+Prt, const std\+::vector$<$ uintptr\+\_\+t $>$ \&offsets) noexcept
+\begin{DoxyCompactList}\small\item\em returns the dynamic pointer from base pointer {\ttfamily base\+Prt} and {\ttfamily offsets} \end{DoxyCompactList}\item 
+\mbox{\Hypertarget{class_external_1_1_memory_acf26112363f7afa37b1b1771bcd9bf08}\label{class_external_1_1_memory_acf26112363f7afa37b1b1771bcd9bf08}} 
+bool {\bfseries memory\+Compare} (const B\+Y\+TE $\ast$b\+Data, const std\+::vector$<$ int $>$ \&signature) noexcept
 \item 
-\mbox{\Hypertarget{class_external_1_1_memory_ac63147d983ebceaaf5340a7d878e51e5}\label{class_external_1_1_memory_ac63147d983ebceaaf5340a7d878e51e5}} 
-bool {\bfseries memory\+Compare} (const B\+Y\+TE $\ast$b\+Data, const B\+Y\+TE $\ast$b\+Mask, const char $\ast$sz\+Mask) noexcept
-\item 
-\mbox{\Hypertarget{class_external_1_1_memory_a05c2e2c6ed5d6e82214dc03e0c9050e5}\label{class_external_1_1_memory_a05c2e2c6ed5d6e82214dc03e0c9050e5}} 
-uintptr\+\_\+t {\bfseries find\+Signature\+Address} (uintptr\+\_\+t start, size\+\_\+t size, const char $\ast$signature, const char $\ast$mask) noexcept
-\end{DoxyCompactItemize}
+uintptr\+\_\+t \mbox{\hyperlink{class_external_1_1_memory_a7ab837e2327e8d0c60de1f1590c08663}{find\+Signature\+Address}} (const uintptr\+\_\+t start, const size\+\_\+t size, const std\+::vector$<$ int $>$ \&signature) noexcept
+\begin{DoxyCompactList}\small\item\em a basic signature scanner \end{DoxyCompactList}\end{DoxyCompactItemize}
 
 
 \doxysubsection{Detailed Description}
@@ -47,6 +46,28 @@ Casual\+Comunity\+: Alien, C3x0r, Casual\+Gamer
 \end{DoxyVersion}
 \begin{DoxyRefDesc}{Todo}
 \item[\mbox{\hyperlink{todo__todo000001}{Todo}}]\+: optimize scanner speed, optional parameter with desired\+Access \end{DoxyRefDesc}
+
+
+\doxysubsection{Member Function Documentation}
+\mbox{\Hypertarget{class_external_1_1_memory_a7ab837e2327e8d0c60de1f1590c08663}\label{class_external_1_1_memory_a7ab837e2327e8d0c60de1f1590c08663}} 
+\index{External::Memory@{External::Memory}!findSignatureAddress@{findSignatureAddress}}
+\index{findSignatureAddress@{findSignatureAddress}!External::Memory@{External::Memory}}
+\doxysubsubsection{\texorpdfstring{findSignatureAddress()}{findSignatureAddress()}}
+{\footnotesize\ttfamily uintptr\+\_\+t External\+::\+Memory\+::find\+Signature\+Address (\begin{DoxyParamCaption}\item[{const uintptr\+\_\+t}]{start,  }\item[{const size\+\_\+t}]{size,  }\item[{const std\+::vector$<$ int $>$ \&}]{signature }\end{DoxyParamCaption})\hspace{0.3cm}{\ttfamily [noexcept]}}
+
+
+
+a basic signature scanner 
+
+
+\begin{DoxyParams}{Parameters}
+{\em start} & Address where to start scanning. \\
+\hline
+{\em size} & Size of the area to search within. \\
+\hline
+{\em signature} & Signature to search for. example\+: \{-\/1, 0x39, 0x05, 0x\+F0, 0x\+A2, 0x\+F6, 0x\+FF\} where -\/1 is a wild card. \\
+\hline
+\end{DoxyParams}
 
 
 The documentation for this class was generated from the following file\+:\begin{DoxyCompactItemize}
