--- a/docs/latex/index.tex
+++ b/docs/latex/index.tex
@@ -3,8 +3,7 @@
 
 Collaborative work provided by the \href{https://discord.gg/CRMQq4F}{\texttt{ Casual\+Community}}\hypertarget{index_autotoc_md2}{}\doxysection{Documentation}\label{index_autotoc_md2}
 The main set of documentation can be found \href{https://casualcoder91.github.io/CasualLibrary/html/index.html}{\texttt{ here}}\hypertarget{index_autotoc_md3}{}\doxysection{Usage}\label{index_autotoc_md3}
-bare-\/bones setup
-
+\hypertarget{index_autotoc_md4}{}\doxysubsection{bare-\/bones setup}\label{index_autotoc_md4}
 
 \begin{DoxyCode}{0}
 \DoxyCodeLine{\textcolor{preprocessor}{\#include <iostream>}}
@@ -14,10 +13,7 @@ bare-\/bones setup
 \DoxyCodeLine{    \mbox{\hyperlink{class_external_1_1_memory}{External::Memory}} memory = \mbox{\hyperlink{class_external_1_1_memory}{External::Memory}}(\textcolor{stringliteral}{"target.exe"});}
 \DoxyCodeLine{\}}
 \end{DoxyCode}
-
-
-read/write memory
-
+\hypertarget{index_autotoc_md5}{}\doxysubsection{read/write memory}\label{index_autotoc_md5}
 
 \begin{DoxyCode}{0}
 \DoxyCodeLine{\textcolor{comment}{//works for all types including uintptr\_t, int, double etc. as well as custom structs and classes.}}
@@ -32,20 +28,19 @@ read/write memory
 \DoxyCodeLine{\textcolor{comment}{//write value 5 starting at given address}}
 \DoxyCodeLine{memory.write<\textcolor{keywordtype}{int}>(address, 5);}
 \end{DoxyCode}
-
-
-get address from static pointer + offsets
-
+\hypertarget{index_autotoc_md6}{}\doxysubsection{get address from static pointer + offsets}\label{index_autotoc_md6}
 
 \begin{DoxyCode}{0}
 \DoxyCodeLine{uintptr\_t healthAddr = memory.getAddress(0x2240001C, \{ 0x01,0x4E \});}
 \end{DoxyCode}
-
-
-get module base address
-
+\hypertarget{index_autotoc_md7}{}\doxysubsection{get module base address}\label{index_autotoc_md7}
 
 \begin{DoxyCode}{0}
 \DoxyCodeLine{uintptr\_t clientAddr = memory.getModule(L\textcolor{stringliteral}{"client.dll"});}
+\end{DoxyCode}
+\hypertarget{index_autotoc_md8}{}\doxysubsection{A\+O\+B Scanner}\label{index_autotoc_md8}
+
+\begin{DoxyCode}{0}
+\DoxyCodeLine{uintptr\_t address = memory.findSignatureAddress(0x7FF702CB5D00, 10000, \{ -\/1, 0x39, 0x05, 0xF0, 0xA2, 0xF6, 0xFF \});}
 \end{DoxyCode}
  
