--- a/docs/latex/index.tex
+++ b/docs/latex/index.tex
@@ -1,9 +1,15 @@
 \hypertarget{index_autotoc_md1}{}\doxysection{About The Project}\label{index_autotoc_md1}
 \mbox{\hyperlink{class_helper}{Helper}} library for external windows game hacking.
 
-Collaborative work provided by the \href{https://discord.gg/CRMQq4F}{\texttt{ Casual\+Community}}\hypertarget{index_autotoc_md2}{}\doxysection{Documentation}\label{index_autotoc_md2}
-The main set of documentation can be found \href{https://casualcoder91.github.io/CasualLibrary/html/index.html}{\texttt{ here}}\hypertarget{index_autotoc_md3}{}\doxysection{Usage}\label{index_autotoc_md3}
-\hypertarget{index_autotoc_md4}{}\doxysubsection{bare-\/bones setup}\label{index_autotoc_md4}
+Collaborative work provided by the \href{https://discord.gg/CRMQq4F}{\texttt{ Casual\+Community}}\hypertarget{index_autotoc_md2}{}\doxysection{Installation}\label{index_autotoc_md2}
+
+\begin{DoxyEnumerate}
+\item Download current release from \href{https://github.com/CasualCoder91/CasualLibrary/releases/}{\texttt{ the release section}}
+\item Extract $\ast$.h and $\ast$.cpp at appropriate location in your project directory.
+\item Include them into your project.
+\end{DoxyEnumerate}\hypertarget{index_autotoc_md3}{}\doxysection{Documentation}\label{index_autotoc_md3}
+The main set of documentation can be found \href{https://casualcoder91.github.io/CasualLibrary/html/index.html}{\texttt{ here}}\hypertarget{index_autotoc_md4}{}\doxysection{Usage}\label{index_autotoc_md4}
+\hypertarget{index_autotoc_md5}{}\doxysubsection{bare-\/bones setup}\label{index_autotoc_md5}
 
 \begin{DoxyCode}{0}
 \DoxyCodeLine{\textcolor{preprocessor}{\#include <iostream>}}
@@ -13,7 +19,7 @@ The main set of documentation can be found \href{https://casualcoder91.github.io
 \DoxyCodeLine{    \mbox{\hyperlink{class_external_1_1_memory}{External::Memory}} memory = \mbox{\hyperlink{class_external_1_1_memory}{External::Memory}}(\textcolor{stringliteral}{"target.exe"});}
 \DoxyCodeLine{\}}
 \end{DoxyCode}
-\hypertarget{index_autotoc_md5}{}\doxysubsection{read/write memory}\label{index_autotoc_md5}
+\hypertarget{index_autotoc_md6}{}\doxysubsection{read/write memory}\label{index_autotoc_md6}
 
 \begin{DoxyCode}{0}
 \DoxyCodeLine{\textcolor{comment}{//works for all types including uintptr\_t, int, double etc. as well as custom structs and classes.}}
@@ -28,17 +34,17 @@ The main set of documentation can be found \href{https://casualcoder91.github.io
 \DoxyCodeLine{\textcolor{comment}{//write value 5 starting at given address}}
 \DoxyCodeLine{memory.write<\textcolor{keywordtype}{int}>(address, 5);}
 \end{DoxyCode}
-\hypertarget{index_autotoc_md6}{}\doxysubsection{get address from static pointer + offsets}\label{index_autotoc_md6}
+\hypertarget{index_autotoc_md7}{}\doxysubsection{get address from static pointer + offsets}\label{index_autotoc_md7}
 
 \begin{DoxyCode}{0}
 \DoxyCodeLine{uintptr\_t healthAddr = memory.getAddress(0x2240001C, \{ 0x01,0x4E \});}
 \end{DoxyCode}
-\hypertarget{index_autotoc_md7}{}\doxysubsection{get module base address}\label{index_autotoc_md7}
+\hypertarget{index_autotoc_md8}{}\doxysubsection{get module base address}\label{index_autotoc_md8}
 
 \begin{DoxyCode}{0}
 \DoxyCodeLine{uintptr\_t clientAddr = memory.getModule(L\textcolor{stringliteral}{"client.dll"});}
 \end{DoxyCode}
-\hypertarget{index_autotoc_md8}{}\doxysubsection{A\+O\+B Scanner}\label{index_autotoc_md8}
+\hypertarget{index_autotoc_md9}{}\doxysubsection{A\+O\+B Scanner}\label{index_autotoc_md9}
 
 \begin{DoxyCode}{0}
 \DoxyCodeLine{uintptr\_t address = memory.findSignatureAddress(0x7FF702CB5D00, 10000, \{ -\/1, 0x39, 0x05, 0xF0, 0xA2, 0xF6, 0xFF \});}
