--- a/docs/latex/index.tex
+++ b/docs/latex/index.tex
@@ -4,7 +4,7 @@
 Collaborative work provided by the \href{https://discord.gg/CRMQq4F}{\texttt{ Casual\+Community}}\hypertarget{index_autotoc_md2}{}\doxysection{Installation}\label{index_autotoc_md2}
 
 \begin{DoxyEnumerate}
-\item Download current release from \href{https://github.com/CasualCoder91/CasualLibrary/releases/}{\texttt{ the release section}}
+\item Download current release (\char`\"{}\+Casual\+Library0.\+1.\+rar\char`\"{}) from \href{https://github.com/CasualCoder91/CasualLibrary/releases/}{\texttt{ the release section}}
 \item Extract $\ast$.h and $\ast$.cpp at appropriate location in your project directory.
 \item Include them into your project.
 \end{DoxyEnumerate}\hypertarget{index_autotoc_md3}{}\doxysection{Documentation}\label{index_autotoc_md3}
