small fix in doc

--- a/docs/latex/index.tex
+++ b/docs/latex/index.tex
@@ -42,7 +42,7 @@ The main set of documentation can be found \href{https://casualcoder91.github.io
 \hypertarget{index_autotoc_md8}{}\doxysubsection{get module base address}\label{index_autotoc_md8}
 
 \begin{DoxyCode}{0}
-\DoxyCodeLine{uintptr\_t clientAddr = memory.getModule(L\textcolor{stringliteral}{"client.dll"});}
+\DoxyCodeLine{uintptr\_t clientAddr = memory.getModule(\textcolor{stringliteral}{"client.dll"});}
 \end{DoxyCode}
 \hypertarget{index_autotoc_md9}{}\doxysubsection{A\+O\+B Scanner}\label{index_autotoc_md9}
 
