added check for x64/x86 added img to documentation added test subject and tests

--- a/docs/latex/class_helper.tex
+++ b/docs/latex/class_helper.tex
@@ -3,8 +3,8 @@
 \doxysubsection*{Static Public Member Functions}
 \begin{DoxyCompactItemize}
 \item 
-\mbox{\Hypertarget{class_helper_a017cbd1b38e3e7804011fa226ca8d319}\label{class_helper_a017cbd1b38e3e7804011fa226ca8d319}} 
-static bool {\bfseries is64} (const H\+A\+N\+D\+LE process)
+\mbox{\Hypertarget{class_helper_a147aa202f70e2e682355185774b58168}\label{class_helper_a147aa202f70e2e682355185774b58168}} 
+static bool {\bfseries matching\+Built} (const H\+A\+N\+D\+LE process)
 \end{DoxyCompactItemize}
 
 
