spelling error fix

--- a/docs/latex/index.tex
+++ b/docs/latex/index.tex
@@ -24,7 +24,7 @@ The main set of documentation can be found \href{https://casualcoder91.github.io
 \begin{DoxyCode}{0}
 \DoxyCodeLine{\textcolor{comment}{//works for all types including uintptr\_t, int, double etc. as well as custom structs and classes.}}
 \DoxyCodeLine{\textcolor{comment}{//does NOT work for arrays/vectors}}
-\DoxyCodeLine{uintptr\_t adress = 0x2240001C;}
+\DoxyCodeLine{uintptr\_t address = 0x2240001C;}
 \DoxyCodeLine{\textcolor{comment}{// read integer stored at address}}
 \DoxyCodeLine{\textcolor{keywordtype}{int} test = memory.read<\textcolor{keywordtype}{int}>(address);}
 \DoxyCodeLine{\textcolor{comment}{// read one word}}
