updated install instruction to match Release 0.1.1

--- a/docs/latex/index.tex
+++ b/docs/latex/index.tex
@@ -4,9 +4,9 @@
 Collaborative work provided by the \href{https://discord.gg/CRMQq4F}{\texttt{ Casual\+Community}}\hypertarget{index_autotoc_md2}{}\doxysection{Installation}\label{index_autotoc_md2}
 
 \begin{DoxyEnumerate}
-\item Download current release (\char`\"{}\+Casual\+Library0.\+1.\+rar\char`\"{}) from \href{https://github.com/CasualCoder91/CasualLibrary/releases/}{\texttt{ the release section}}
-\item Extract $\ast$.h and $\ast$.cpp at appropriate location in your project directory.
-\item Include them into your project.
+\item Download current release (\char`\"{}\+Casual\+Library0.\+1.\+1.\+rar\char`\"{}) from \href{https://github.com/CasualCoder91/CasualLibrary/releases/}{\texttt{ the release section}}
+\item Extract $\ast$.h and $\ast$.lib file(s) at appropriate location in your project directory.
+\item Include them into your project\+: Use Casual\+Libraryd.\+lib for debug builds and Casual\+Library.\+lib for release builds.
 \end{DoxyEnumerate}\hypertarget{index_autotoc_md3}{}\doxysection{Documentation}\label{index_autotoc_md3}
 The main set of documentation can be found \href{https://casualcoder91.github.io/CasualLibrary/html/index.html}{\texttt{ here}}\hypertarget{index_autotoc_md4}{}\doxysection{Usage}\label{index_autotoc_md4}
 \hypertarget{index_autotoc_md5}{}\doxysubsection{bare-\/bones setup}\label{index_autotoc_md5}
